small cleanup